completed header, fixes header alignment issues

--- a/views/index.css
+++ b/views/index.css
@@ -15,11 +15,11 @@ body {
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: flex-end;
+
   gap: 2vw;
   position: sticky;
-  top: 0px;
-  height: 3vh;
+  top: 0;
+  height: 5vh;
   font-family: "Roboto", sans-serif;
 }
 .main-div {
@@ -30,22 +30,42 @@ body {
   align-items: center;
   justify-content: center;
 }
-a {
+.nav-links {
   text-decoration: none;
   color: var(--color-primary);
 }
-.navbar > h3 {
+.nav-links:hover {
   color: var(--color-tertioary);
 }
-.navbar > form > button {
+.welcome-user {
+  color: var(--color-tertioary);
+}
+.logout-button {
   color: var(--color-primary);
   background-color: var(--color-tertioary);
   border: none;
+  height: 1.5rem;
+  width: 4rem;
   border-radius: 10px;
+  font-family: Anton, sans-serif;
+}
+.logout-button:hover {
+  border: 1px solid var(--color-primary);
+}
+.nav-left {
+  display: flex;
+  flex-direction: row;
+  margin: 0 10vw;
+  align-items: center;
+  justify-content: flex-end;
+  height: 3vh;
+  gap: 5vw;
 }
 .nav-right {
+  width: 40vw;
   display: flex;
-  margin: auto;
+  flex-direction: row;
+  margin-left: 10vw;
   align-items: center;
   justify-content: flex-end;
   height: 3vh;
